# todo_drogon_server

./: .gitignore  CMakeLists.txt  EchoWebSocket.cc  EchoWebSocket.h  EchoWebsock.cc  EchoWebsock.h  JAdminWebsock.cc  JAdminWebsock.h  JUserWebsock.cc  JUserWebsock.h  MUserWebsock.cc  MUserWebsock.h  MusicWebsock.cc  MusicWebsock.h  Procfile.dev  bugs.txt  caf.cpp  caf.h  config.json  context.cpp  context.h  demo_v1_User.cc  demo_v1_User.h  deploy.sh  eventdispatcher.cpp  eventdispatcher.h  filelines.txt  forman_start.sh  jadminactor.cpp  jadminactor.h  json.hpp  juseractor.cpp  juseractor.h  madminactor.cpp  madminactor.h  main.cc  mainactor.cpp  mainactor.h  messagehandle.cpp  messagehandle.h  (+9 more)
core/: CMakeLists.txt  Table.cpp  ciphersettings.cpp  ciphersettings.h  condformat.cpp  condformat.h  dotenvformat.cpp  dotenvformat.h  jsonfns.cpp  jsonfns.h  macro.h  modelenums.h  settings.cpp  settings.h  sqlitedb.cpp  strfns.cpp  strfns.h
core/actor/: permission.cpp  permission.h  validation.cpp  validation.h
core/connection/: CMakeLists.txt  mdb.cpp  mdb.h  pdb.cpp  pdb.h
core/dgraph/: CMakeLists.txt  dgraph.qmodel  dgraphclient.cpp  dgraphclient.h  dgraphclientmanger.cpp  dgraphclientmanger.h  dgraphclientstub.cpp  dgraphclientstub.h  dgraphtxn.cpp  dgraphtxn.h
core/dgraph/dgraphgrpc/: dgraphclient.cpp  dgraphclient.h  txn.cpp  txn.h
core/dgraph/dgraphhttp/: dgraphclient.h  dgraphclientstub.cpp  dgraphtxn.h
core/dgraph/http/: DGraphHttpClient.cpp  DGraphHttpClient.h  HttpClientManger.cpp  HttpClientManger.h
core/dgraph/orm/: dgraphorm.cpp  dgraphorm.h  dgraphormstartup.cpp  dgraphormstartup.h  model.cpp  model.h  model.qmodel  query.cpp  query.h  schema.cpp  schema.h  type.cpp  type.h
core/dgraph/ormtest/: CMakeLists.txt  example.cpp  main.cpp  test.cpp
core/service/: baseservice.cpp  baseservice.h  baseserviceabs.cpp  baseserviceabs.h  dba.cpp  dba.h
core/service/account/: account.cpp  account.h  accountheading.cpp  accountheading.h  accounttype.cpp  accounttype.h  journaltype.cpp  journaltype.h  priority.cpp  priority.h  txn.cpp  txn.h
core/service/auth/: auth.cpp  auth.h
core/service/entity/: addresstype.cpp  addresstype.h  contacttype.cpp  contacttype.h  entity.cpp  entity.h  entitytype.cpp  entitytype.h
core/service/generator/: generator.cpp  generator.h
core/service/jadmin/: baseservice.cpp  baseservice.h
core/service/madmin/: baseservice.cpp  baseservice.h
core/service/material/: accessory.cpp  accessory.h  clarity.cpp  clarity.h  cscolor.cpp  cscolor.h  cssize.cpp  cssize.h  cstype.cpp  cstype.h  dcolor.cpp  dcolor.h  dsize.cpp  dsize.h  metal.cpp  metal.h  purity.cpp  purity.h  shape.cpp  shape.h  size.cpp  size.h  tone.cpp  tone.h
core/service/menu/: node.cpp  node.h  role.cpp  role.h  task.cpp  task.h
core/service/mfg/: casting.cpp  casting.h  department.cpp  department.h  departmenttype.cpp  departmenttype.h  metalissue.cpp  metalissue.h  mfgtxn.cpp  mfgtxn.h  mtransfer.cpp  mtransfer.h  refining.cpp  refining.h  waxsetting.cpp  waxsetting.h
core/service/post/: post.cpp  post.h  tag.cpp  tag.h
core/service/product/: certifiedby.cpp  certifiedby.h  pcategory.cpp  pcategory.h  policy.cpp  policy.h  poptions.cpp  poptions.h  product.cpp  product.h  pshippingclass.cpp  pshippingclass.h  settingtype.cpp  settingtype.h
core/service/setting/: currency.cpp  currency.h  image.cpp  image.h  imagecollection.cpp  imagecollection.h  log.cpp  log.h  paymentmethod.cpp  paymentmethod.h  setting.cpp  setting.h  support.cpp  support.h
core/service/time/: CMakeLists.txt  dgraphormstartup.cpp  dgraphormstartup.h  servicebase.cpp  servicebase.h  timeservicebase.cpp  timeservicebase.h
core/service/todo/: Project.cpp  Project.h  TodoRole.cpp  TodoRole.h  TodoTask.cpp  TodoTask.h  TodoUser.cpp  TodoUser.h  WorkModify.cpp  WorkModify.h
core/sql/: Table.cpp  Table.h  ciphersettings.cpp  condformat.cpp  condformat.h  data.cpp  dba.cpp  dba.h  objectidentifier.cpp  objectidentifier.h  query.cpp  query.h  sqlitedb.cpp  sqlitedb.h  sqlitetypes.cpp  sqlitetypes.h
core/tables/: Table.cpp  Table.h  condformat.cpp  condformat.h  data.cpp  functions.cpp  functions.h  jsonfns.cpp  jsonfns.h  macro.h  savefunctions.cpp  savefunctions.h
core/tables/query/: accountquery.cpp  accountquery.h  entityquery.cpp  entityquery.h  materialquery.cpp  materialquery.h  menuquery.cpp  menuquery.h  mfgquery.cpp  mfgquery.h  postquery.cpp  postquery.h  productquery.cpp  productquery.h  settingquery.cpp  settingquery.h
core/tables/savedel/: accountsave.cpp  accountsave.h  entitysave.cpp  entitysave.h  materialsave.cpp  materialsave.h  menusave.cpp  menusave.h  mfgsave.cpp  mfgsave.h  postsave.cpp  postsave.h  productsave.cpp  productsave.h  settingsave.cpp  settingsave.h
dgraph/: CMakeLists.txt  dgraph.qmodel
dgraph/dgraph-js/: generate_proto.sh  package.json
dgraph/dgraphgrpc/: dgraphclient.cpp  dgraphclient.h  txn.cpp  type.cpp  type.h
dgraph/dgraphhttp/: dgraphclient.cpp  dgraphclientstub.cpp  dgraphclientstub.h  dgraphtxn.cpp
dgraph/dgraphhttp/httpendpoint/: DGraphHttpClient.cpp  HttpClientManger.cpp  HttpClientManger.h
dgraph/orm/: model.h  query.cpp  query.h  type.cpp  type.h
dgraph/ormtest/: example.cpp  example.h  main.cpp  test.h
test/: CMakeLists.txt  mainwindow.ui
test/catch2_test/: CMakeLists.txt  README.md
test/catch2_test/jadmin_test/: CMakeLists.txt  test_ws.cpp
test/catch2_test/juser_test/: CMakeLists.txt
test/catch2_test/madmin_test/: CMakeLists.txt  test_ws.cpp
test/catch2_test/muser_test/: CMakeLists.txt
test/catch2_test/qmadmin_test/: CMakeLists.txt  test_ws.cpp
test/catch2_test/src/: BatchResultTest.cpp  BatchResultTest.h  wstestbase.cpp  wstestbase.h
test/catch2_test/todo_test/: CMakeLists.txt  openproj.cpp  test_ws.cpp  test_ws.cpp000
test/catch2_test/wsclient/: CMakeLists.txt  once.h  wsclient.cpp  wsclient.h
test/gui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
test/hello-catch2-cmake/: CMakeLists.txt
test/hello-catch2-cmake/src/: fibonacci.cpp  fibonacci.hpp  (+3 more)
test/jadmin_test/: CMakeLists.txt
(+2632 files in other folders)
